# ImageSplicingDetection

./: .gitignore  README.md
source/illuminants/: CMakeLists.txt  CMakeLists.txt~  Makefile  README.txt  commands.txt  config.txt
source/illuminants/buildold/: optional.cpp
source/illuminants/cmake/: FindLPSolve.cmake  FindPETSc.cmake  FindQhull.cmake  FindSLEPc.cmake  VoleCheckDependencies.cmake  VoleHelperMacros.cmake  VoleModuleMacros.cmake  VoleProcessOptionalDependencies.cmake
source/illuminants/color_processing/: pixel_operations.cpp
source/illuminants/common/: data_traits.h  filesystem_helpers.cpp  image_group.h  labeling.cpp  multi_img.h  multi_img_io.cpp  progress_observer.h  vole_image.cxx  vole_image.h  vole_limits.h  vole_statistics.h  vole_storage.cpp  vole_storage.h  vole_user_paths.cpp  vole_user_paths.h
source/illuminants/computational_geometry/: connected_components.cpp  graham_scan.cpp
source/illuminants/illumestimators/: illuminantestimator.cpp  illuminantestimator.h
source/illuminants/illumestimators/baseline/: meanestimator.h
source/illuminants/illumestimators/bayesian/: bayesianestimator.h~
source/illuminants/illumestimators/commands/: apply_estimators_command.cpp  apply_estimators_command.cpp~  apply_estimators_command.h  apply_estimators_config.cpp  bayesiancommand.cpp~  bayesiancommand.h  bayesianconfig.cpp  grayworldconfig.h
source/illuminants/illumestimators/common/: color.cpp  color.h  convexhull.h  convexpolygon.h  derivative.cpp  derivative.h  illuminant_estimator_loader.cpp  illuminant_estimator_loader.h  linesegment.cpp  mask.cpp  mask.h  statistics.cpp  statistics.h
source/illuminants/illumestimators/evaluation/: crossvalidation.cpp  error.h  error2.cpp  error2.h  evaluationreport.h
source/illuminants/illumestimators/fusion/: config_histogram_voting_fusion.cpp  config_histogram_voting_fusion.h  fusion.cpp  fusion.h  histogramVotingFusion.cpp  histogramVotingFusion.h
source/illuminants/illumestimators/grayworld/: grayworldestimator.cpp  grayworldestimator.h
source/illuminants/illumestimators/iic/: config_iebv.cpp  config_iebv.h  iebv.cpp  iebv.h  iebv_estimator.cpp  iebv_estimator.h  iic.cpp  iic.h
source/illuminants/illumestimators/pipeline/: single_illuminant_pipeline.cpp
source/illuminants/lille/: CMakeLists.txt  CMakeLists.txt~  lbayesian_config.cpp  lbayesian_config.cpp~  lgrayworld_config.cpp  lgrayworld_config.h  liebv_config.cpp  liebv_config.h  paint_superpixel.cpp  paint_superpixel.h
source/illuminants/lille/commands/: command_color_illum_field.cpp  command_color_illum_field.h  command_gw_orig.cpp  command_gw_orig.h  command_lbayesian.cpp  command_lgrayworld.cpp  command_lgrayworld.h  command_liebv.cpp  (+5 more)
source/illuminants/rbase/: CMakeLists.txt  color.cpp  color.h  color_space.cpp  color_space.h  db_descriptor.cpp  db_index_shi.cpp  db_index_shida.cpp  illum.cpp  illum.h  img_read.cpp  img_read.h  img_read_config.cpp  img_read_config.h  mask.cpp  mask.h  srgb2rgb_config.h
source/illuminants/shell/: command.h  config.cpp  config.h  main.cxx  modules.cpp  modules.cpp.in  modules.h  modules.h.in
source/illuminants/storage/: CMakeLists.txt  command_cache_adm.cpp  vole_cache_config.h
source/illuminants/superpixels/: CMakeLists.txt  normal_image.cpp  normal_image.h  superpixel.h  superpixelsegmentation.cpp  superpixelsegmentation.h
(+816 files in other folders)
